CommunitySFI concurrency bug